--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,15 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
+<% @users = User.all %>
 <% if user_signed_in? %>
   <div>
-    <%= render(UserNameComponent.new(user: current_user)) %>
+    <%= render(UserNameComponent.with_collection(@users)) %>
   </div>
   <div>
-    <%= render(partial: 'shared/user/name', locals: { user: current_user }) %>
+    <%= render(partial: 'shared/user/name', collection: @users, as: :user) %>
   </div>
   <div>
-    <%= cell(User::Cell::Name, current_user) %>
+    <%= cell(User::Cell::Name, collection: @users) %>
   </div>
 <% end %>
