--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,4 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<% @users = User.all %>
-<% if user_signed_in? %>
-  <div>
-    <%= render(UserNameComponent.with_collection(@users)) %>
-  </div>
-  <div>
-    <%= render(partial: 'shared/user/name', collection: @users, as: :user) %>
-  </div>
-  <div>
-    <%= cell(User::Cell::Name, collection: @users) %>
-  </div>
-<% end %>
+<%= link_to('view_component', view_component_sample_index_path) %>
