--- a/app/views/view_component_sample/index.html.erb
+++ b/app/views/view_component_sample/index.html.erb
@@ -1,2 +1,15 @@
 <h1>ViewComponentSample#index</h1>
 <p>Find me in app/views/view_component_sample/index.html.erb</p>
+
+<% @users = User.all %>
+<div>
+  <%= render(UserNameComponent.with_collection(@users)) %>
+</div>
+---
+<div>
+  <%= render(partial: 'shared/user/name', collection: @users, as: :user) %>
+</div>
+---
+<div>
+  <%= cell(User::Cell::Name, collection: @users) %>
+</div>
