--- a/app/views/users/todos/index.html.erb
+++ b/app/views/users/todos/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Users::Todos#index</h1>
 <p>Find me in app/views/users/todos/index.html.erb</p>
+
+<%= javascript_pack_tag 'todoList' %>
+<div id='root'></div>
