--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,4 @@
 <p>Find me in app/views/home/index.html.erb</p>
 
 <%= link_to('view_component', view_component_sample_index_path) %>
+<%= link_to('todo', users_todos_path) %>
