hello react-konva

--- a/app/views/konva_sample/index.html.erb
+++ b/app/views/konva_sample/index.html.erb
@@ -1,2 +1,6 @@
 <h1>KonvaSample#index</h1>
 <p>Find me in app/views/konva_sample/index.html.erb</p>
+
+<%= javascript_pack_tag 'konva_sample' %>
+
+<div id='root'></div>
