とりあえずな link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,5 @@
 
 <%= link_to('view_component', view_component_sample_index_path) %>
 <%= link_to('todo', users_todos_path) %>
+<%= link_to('articles', articles_path) %>
+<%= link_to('books', books_path) %>
