--- a/app/views/async_notification/index.html.erb
+++ b/app/views/async_notification/index.html.erb
@@ -1,2 +1,5 @@
 <h1>AsyncNotification#index</h1>
 <p>Find me in app/views/async_notification/index.html.erb</p>
+
+<div id='root'></div>
+<%= javascript_pack_tag 'async_notification' %>
