--- a/app/views/article_search/index.html.erb
+++ b/app/views/article_search/index.html.erb
@@ -1,2 +1,35 @@
 <h1>ArticleSearch#index</h1>
 <p>Find me in app/views/article_search/index.html.erb</p>
+
+
+<div class='form'>
+  <%= form_with(model: @search_form, url: article_search_root_path, method: :get) do |f| %>
+    <%= f.text_field :query %>
+    <%= f.collection_check_boxes(:tags, Tag.all, :name, :name, include_blank: false) %>
+    <%= f.submit 'search' %>
+  <% end %>
+</div>
+
+<div>
+  total_count: <%= @result.response.dig('hits', 'total', 'value') %>
+</div>
+
+-----------------
+
+<div class='archive'>
+  <% @articles.each do |article| %>
+    <div class='article'>
+      title: <%= article.title %>
+      <ul>
+        <% article.tags.each do |tag| %>
+          <li>
+            <%= tag.name %>
+          </li>
+        <% end %>
+      </ul>
+      <div>
+        <%= article.body %>
+      </div>
+    </div>
+  <% end %>
+</div>
