--- a/app/views/article_search/index.html.erb
+++ b/app/views/article_search/index.html.erb
@@ -10,10 +10,48 @@
   <% end %>
 </div>
 
-<div>
+<div class='pagenation'>
   total_count: <%= @result.response.dig('hits', 'total', 'value') %>
-</div>
-
+  <% article_search_pagination(@result) do |paginator| %>
+    <ul>
+    <% paginator.prev_page do |page| %>
+       <li>
+        <%= link_to("<<", url_for(@search_form.model_name.param_key => page.definition)) %>
+       </li>
+    <% end %>
+    <% paginator.first_page do |page| %>
+       <li>
+        <%= link_to("FIRST_PAGE!", url_for(@search_form.model_name.param_key => page.definition)) %>
+       </li>
+    <% end %>
+    <% paginator.first_ellipsis do %>
+      <li>
+        <%= "..." %>
+      </li>
+    <% end %>
+    <% paginator.in_surround do |page|%>
+      <li>
+        <%= link_to(page.current? ? "current_page" : page.number, url_for(@search_form.model_name.param_key => page.definition)) %>
+      </li>
+    <% end %>
+    <% paginator.last_ellipsis do %>
+      <li>
+        <%= "..." %>
+      </li>
+    <% end %>
+    <% paginator.last_page do |page| %>
+       <li>
+        <%= link_to("LAST_PAGE!", url_for(@search_form.model_name.param_key => page.definition)) %>
+       </li>
+    <% end %>
+    <% paginator.next_page do |page| %>
+       <li>
+        <%= link_to(">>", url_for(@search_form.model_name.param_key => page.definition)) %>
+       </li>
+    <% end %>
+    </ul>
+  <% end %>
+<div>
 -----------------
 
 <div class='archive'>
