--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @entry.url %></h1>
 
+<%= button_to 'create history', create_history_entry_path(@entry), method: :post %>
+
 <% if @entry.histories.present? %>
   <ul>
     <% @entry.histories.each do |history| %>
