--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,4 +20,7 @@
   <li>
     <%= link_to('cable + react', async_notification_index_path) %>
   </li>
+  <li>
+    <%= link_to('screenshot', entries_path) %>
+  </li>
 </ol>
